--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.blue{
+  background-color: blue;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-paragraph{
+  box-shadow:  0 30px 20px rgba(188, 20, 20, 0.2);
+  border-radius: 20px;
+  width: 50%;
+  padding:10px;
+}
+
+.login{
+  /* border: 1px grey solid; */
+  width: 25rem;
+  margin:18rem auto;
+  padding: 50px;
+  box-shadow: 1px 1px 1px 1px rgb(152, 220, 152);
+  border-radius:5px;
+  display: flex;
+  justify-content: center;
+}
+
+nav{
+  display: flex;
+  justify-content: center;
+}
+
+.menuLink{
+  margin-left: 50px;
+}
+
+
+.textField{
+  margin-right:0;
+  min-height: 1.5em;
+}
+.fieldLabel{
+  display: block;
+  margin: 2px 0;
 }
