--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .blue{
   background-color: blue;
   color: white;
@@ -39,3 +43,4 @@ nav{
   display: block;
   margin: 2px 0;
 }
+
